# option

./: .pre-commit-config.yaml  README.md  pyproject.toml
option/: __init__.py  option.py  option.pyi
src/option/: __init__ .py  __init__.py  exceptions.py  maybe.py  option.py  option.pyi  some.py
tests/: test_factories.py  test_option.py  test_pattern_matching.py
